--- a/gobotany/static/sass/site.scss
+++ b/gobotany/static/sass/site.scss
@@ -274,30 +274,26 @@ header {
     }
 }
 header .go-botany {
-    float: left;
-    height: 54px;
+    align-items: baseline;
+    display: flex;
     margin: 0;
     padding: 18px 0 0 0;
-    width: 424px;
+    position: relative;
     z-index: 5;
     a {
-        background: url(/static/images/layout/npt-gb-logo.svg) no-repeat transparent;
-        background-size: 150px 48px;
-        height: 48px;
-        width: 150px;
-        @include offscreen;
+        margin-right: 1.2em;
+        width: 12.5em;
     }
     .tagline {
+        bottom: 0;
         color: $dark-green;
-        float: right;
         font-family: Basetica, sans-serif;
-        font-size: 13px;
-        margin: -19px 0 0 0;
-        padding: 4px 0 0;
+        font-size: 1.07em;
+        position: absolute;
+        left: 13em;
     }
 }
 header nav {
-    clear: both;
     font-family: $headings-font;
     padding-top: 7px;
     > ul {
